--- a/styles/EventItem.module.css
+++ b/styles/EventItem.module.css
@@ -1,28 +1,86 @@
 .event {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 20px 0;
-  padding: 13px;
-  box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.1);
+  width: calc(100% - 2 * .5rem);
+  margin: .5rem;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  overflow: hidden;
+  border-radius: 8px;
+}
+@media(min-width: 560px){
+  .event{
+    width: calc(50% - 2 * .5rem);
+  }
+}
+@media(min-width: 760px) {
+  .event{
+    width: calc(33.33333% - 2 * .5rem);
+  }
+}
+@media(min-width: 1024px) {
+  .event{
+    width: calc(25% - 2 * .5rem);
+  }
+}
+.img_wrapper {
+  position: relative;
+  padding-bottom: 56%;
+  background-color: var(--mainYellow);
+  cursor: pointer;
+}
+.img_wrapper img{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-.img {
-  flex: 1;
-  margin: 10px;
+.user{
+  padding: .5rem .9rem 0 .9rem;
+  display: flex;
+  align-items: center;
+  line-height: 1;
+}
+.user .userimage_wrapper{
+  position: relative;
+  width: 34px;
+  height: 34px;
+  margin-right: 8px;
+}
+.user .userimage_wrapper img{
+  border-radius: 50%;
 }
 
 .info {
-  flex: 2;
+  padding: 0rem .9rem 1rem .9rem;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 8px;
 }
+.info .date{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  font-weight: 700;
+  line-height: 1;
+  flex-direction: column;
+  position: relative
+}
+.info .date .year{
+  font-size: .8rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color: var(--mainYellow);
 
-@media (max-width: 600px) {
-  .event {
-    flex-direction: column;
-    text-align: center;
-  }
-
-  .info {
-    margin-bottom: 20px;
-  }
+  transform-origin:0 50%;
+  transform:rotate(-90deg) translate(-25%, 50%);
+}
+.info .description h3{
+  line-height: 1.1;
+}
+.info .description span{
+  line-height: 1;
+  display: block;
 }
