--- a/styles/Event.module.css
+++ b/styles/Event.module.css
@@ -1,8 +1,34 @@
-.event {
+.image{
+  position: absolute;
+  width: 100%;
+  top: 62px;
+  left: 0;
+}
+.user_wrapper{
   position: relative;
-  padding-top: 40px;
+  color: white;
+  text-shadow: 1px 1px var(--mainBlack);
+}
+.user_wrapper h1{
+  font-size: 1.8rem;
 }
 
+.user_wrapper .user{
+  display: flex;
+  align-items: center;
+  font-size: .7rem;
+}
+.user_wrapper .user h2{
+  margin-left: .8rem;
+}
+
+.event_detail {
+  color: blueviolet;
+  margin-top: 100px;
+}
+
+
+/* 
 .event h3 {
   font-size: 25px;
 }
@@ -29,4 +55,4 @@
 .back {
   display: block;
   margin-top: 40px;
-}
+} */
